--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -1,6 +1,11 @@
-<h1>Login</h1>
-<form action="/users/login/" method="post">
-    {% csrf_token %}
-    {{ form }}
-    <button class="">Submit</button>
-</form>
+{% extends "base2.html" %}
+{% block content %}
+<div class="container">
+    <h1>Login</h1>
+    <form action="/users/login/" method="post">
+        {% csrf_token %}
+        {{ form }}
+        <button class="">Submit</button>
+    </form>
+</div>
+{% endblock %}
